// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`extended runtime demo diagnostics invalid_type -> template 1`] = `
{
  "data": {
    "createTemplateConstraint": {
      "__typename": "CreateTemplateConstraintResult",
      "constraint": null,
      "diagnostics": [
        {
          "__typename": "Diagnostic",
          "code": "invalid_type",
          "message": "expected one of: worktemplate; received: __test__",
        },
      ],
      "instantiations": [],
    },
  },
}
`;

exports[`extended runtime demo diagnostics invalid_type -> entity 1`] = `
{
  "data": {
    "createTemplateConstraint": {
      "__typename": "CreateTemplateConstraintResult",
      "constraint": null,
      "diagnostics": [
        {
          "__typename": "Diagnostic",
          "code": "invalid_type",
          "message": "expected one of: location; received: __test__",
        },
      ],
      "instantiations": [],
    },
  },
}
`;

exports[`extended runtime demo it should show up in the app 1`] = `
{
  "__typename": "TrackableEdge",
  "node": {
    "__typename": "Location",
    "name": {
      "__typename": "Name",
      "value": "Super Fast Assembly Line",
    },
    "timeZone": "America/Denver",
    "tracking": {
      "edges": [
        {
          "node": {
            "fsm": {
              "active": {
                "assignees": {
                  "edges": [
                    {
                      "node": {
                        "assignedTo": null,
                      },
                    },
                  ],
                },
                "description": null,
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "description": null,
                        "name": {
                          "value": "Override Start Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                          "timestamp": null,
                        },
                        "valueType": "timestamp",
                      },
                    },
                    {
                      "node": {
                        "description": null,
                        "name": {
                          "value": "Override End Time",
                        },
                        "value": {
                          "__typename": "TimestampValue",
                          "timestamp": null,
                        },
                        "valueType": "timestamp",
                      },
                    },
                    {
                      "node": {
                        "description": null,
                        "name": {
                          "value": "Run Output",
                        },
                        "value": {
                          "__typename": "NumberValue",
                        },
                        "valueType": "number",
                      },
                    },
                    {
                      "node": {
                        "description": null,
                        "name": {
                          "value": "Reject Count",
                        },
                        "value": {
                          "__typename": "NumberValue",
                        },
                        "valueType": "number",
                      },
                    },
                    {
                      "node": {
                        "description": null,
                        "name": {
                          "value": "Comments",
                        },
                        "value": {
                          "__typename": "StringValue",
                          "string": null,
                        },
                        "valueType": "string",
                      },
                    },
                  ],
                },
                "name": {
                  "value": "Run",
                },
                "parent": {
                  "name": {
                    "value": "Super Fast Assembly Line",
                  },
                },
                "state": {
                  "__typename": "Open",
                },
              },
              "transitions": {
                "edges": [],
              },
            },
            "name": {
              "value": "Run",
            },
          },
        },
      ],
    },
  },
}
`;
